--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "test": "NODE_ENV=test nyc --reporter=html mocha"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.8",
     "axios": "^0.19.0",
     "bluebird": "^3.5.3",
     "body-parser": "^1.15.2",
     "chai-as-promised": "^7.1.1",
+    "cls-hooked": "^4.2.2",
     "cron": "^1.7.2",
     "dsteem": "^0.8.7",
     "eslint": "^5.16.0",
@@ -27,9 +29,9 @@
     "express": "^4.14.0",
     "franc-min": "^4.1.0",
     "http-errors": "~1.6.2",
-    "mongoose": "^5.7.12",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "mongoose": "^5.7.12",
     "morgan": "~1.9.0",
     "proxyquire": "^2.1.3",
     "redis": "^2.8.0",
